--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         src="img/company-logo-with-text.png">
 
       <p class="lead">
-        <a href="https://www.linkedin.com/in/petrusrepo">Petrus Repo</a>
-        &middot; +358 44 0101 034
-        &middot; firstname@petafox.com
+        <span class="contact-detail"><a href="https://www.linkedin.com/in/petrusrepo">Petrus Repo</a></span>
+        <span class="contact-detail">+358 44 0101 034</span>
+        <span class="contact-detail">firstname@petafox.com</span>
       </p>
     </div>
   </body>
