--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Petrus Repo is a highly skilled software engineer, freelancing as Petafox Oy">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/img/favicon-192px.png">
 
 
     <link rel="stylesheet" href="css/normalize.css">
