Better logo text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main-container">
       <img
         class="center main-logo"
-        title="Petafox Oy" alt="Petafox Oy logo"
+        title="Petafox Oy" alt="Petafox Oy"
         src="img/company-logo-with-text.png">
 
       <p class="lead">
